k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudguard
  labels:
    name: cloudguard
    app: cloudguard-anomaly
